Fixed white space above search box

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
 
 .filter-container {
   /*border: solid 3px red;*/
+  padding-bottom: 5px;
   position: absolute;
   background: #180AF4FF;
   font-size: 25px;
